# mono

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: python-app.yml
api-reference/: index.html
docs/: api-reference.md  index.md
examples/: customshell.py  customtheme.py  highres.py  mono.py  standalone.py  tabbed.py
mono/: __init__.py  ansi.py  parser.py  styles.py  tab.py  tabs.py  terminal.py  test.py  text.py  theme.py
mono/shells/: __init__.py  bash.py  cmd.py  default.py  powershell.py  python.py
mono/utils/: __init__.py
search/: search_index.json
tests/: test_standalone.py  test_tabbed.py
